# biab-library

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: conda.yml  pip.yml  python-publish.yml  wheels.yml
src/: main.cpp
tests/: test.py  test_basic.py
tests/test-data/: track.MGU
